--- a/firebase.json
+++ b/firebase.json
@@ -1,18 +1,12 @@
 {
     "hosting": {
-      "site": "test-audio-ai",
+      "site": "audio-player-ai",
       "public": "public",
       "ignore": [
         "firebase.json",
         "**/.*",
         "**/node_modules/**"
       ]
-    },
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
+    }
   }
   
